"from" is not a keyword.
	* src/parser/ugrammar.y, src/parser/utoken.l: Dekeywordify "from".
	* doc/RELEASE-NOTES.txt: Note it.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -4,13 +4,14 @@ release.
 Grammar
 =======
 
-"object" as identifier
-----------------------
+"object" and "from" as identifiers
+----------------------------------
 
-"object" is now a regular identifier and can be used as other names.
-For example, it is now legal to declare:
+"object" and "from" are now regular identifiers and can be used as
+other names.  For example, it is now legal to declare:
 
   var object = 1;
+  var from = 1;
 
 Standard library
 ================
