Do not continue an "every" block after an exception.
	* share/urbi/control.u (every_): Abort an "every" block
	if an exception is thrown and not caught.
	* doc/RELEASE-NOTES.txt: Mention it.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -138,6 +138,12 @@ apparent. They are now displayed as "Tag<name>":
   Tag.new("mytag");
   [00000002] Tag<mytag>
 
+"every" and exceptions
+----------------------
+
+If an exception is thrown and not caught during the execution of an "every"
+block, the "every" expression is stopped and the exception displayed.
+
 UObjects
 ========
 
