--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,20 @@
 This file summarizes the user-visible changes since the first beta1
 release.
 
+****************************
+* New in kernel 2.0 beta 3 *
+****************************
+
+Uobjects
+========
+
+The error message given to the user trying to cast a void UVar has been
+specialized.
+
+****************************
+* New in kernel 2.0 beta 2 *
+****************************
+
 Grammar
 =======
 
@@ -211,7 +225,6 @@ uobjects, for example in the following expression:
 
 This has been fixed. "__name" contains a valid slot name of
 "uobjects".
-
 
 Auxiliary programs
 ==================
