--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,9 +1,9 @@
 This file summarizes the user-visible changes since the first beta1
 release.
 
-****************************
-* New in kernel 2.0 beta 3 *
-****************************
+*******************************
+* New since kernel 2.0 beta 2 *
+*******************************
 
 Grammar
 =======
