--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -14,6 +14,14 @@ Grammar
 The syntax "new myObject(myArgs)" has been deprecated and now gives a
 warning. The recommended "myObject.new(myArgs)" is suggested.
 
+"delete" has been removed
+-------------------------
+
+"delete" was never the right thing to do. A local variable should
+not be deleted, and a slot can be removed using "removeSlot".
+The construction "delete object" has been removed from the
+language.
+
 "__FILE__" and "__LINE__"
 -------------------------
 
