Do not crash after removing a non-existing slot.
Coherently with other slots system in the tree, we silently succeed
in erasing a non-existing slot rather than corrupt the data structure.

This behaviour may be changed at an upper level if we later think this
is not appropriate.

	* src/object/centralized-slots.hxx (erase): If the slot
	doesn't exist, do not corrupt the data structure.
	* doc/RELEASE-NOTES.txt: Update.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -80,6 +80,12 @@ dropping all the tags beforehand, including the connection tag. The
 code will still continue to execute after the connection that created
 it has died.
 
+"Object.removeSlot"
+-------------------
+
+The "removeSlot" method now silently accepts non-existing slot
+names instead of signalling an error.
+
 UObjects
 ========
 
