Add the first FAQ draft.
	* doc/FAQ.txt: New.
	* doc/RELEASE-NOTES.txt: Mention its existence.
	* scripts/package.in: Add it to the release.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -5,6 +5,15 @@ release.
 * New since kernel 2.0 beta 2 *
 *******************************
 
+Meta
+====
+
+Frequently asked questions
+--------------------------
+
+A new document "FAQ.txt" addresses the questions most frequently asked by our
+users during the beta-test period.
+
 Grammar
 =======
 
