--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -14,12 +14,12 @@ elements.
 
 List can be created with their literal syntax, as shown in
 \autoref{sec:us-syn-lit-list}. They can also be created with the
-\lstinline|new| method of \lstinline|List|, given the size and an
-initialization value (\autoref{lst:new-list}).
+\lstinline|new| method of \lstinline|List|, given the initial members
+(\autoref{lst:new-list}).
 
 \begin{urbiscript}[caption=List.new, label=lst:new-list]
-List.new(5, "foo");
-[00000000] ["foo", "foo", "foo", "foo", "foo"]
+List.new(nil, "foo", 42);
+[00000000] [nil, "foo", 42]
 \end{urbiscript}
 
 \subsection{Methods}
@@ -221,75 +221,77 @@ of results (\autoref{lst:list-map}).
 [00000000] [true, false, true, false]
 \end{urbiscript}
 
-\subsubsection{nth}
+\subsubsection{[]}
 \label{sec:std-list-nth}
 
 Return the nth member of the target (indexing is zero-based). An error
 if out of bounds (\autoref{lst:list-nth}).
 
-\begin{urbiscript}[caption=List.nth, label=lst:list-nth]
-[0, 1, 2].nth(1);
+\begin{urbiscript}[caption=List.'[]', label=lst:list-nth]
+var l = [0, 1, 2];
+[00000000:hide] [0, 1, 2]
+l[1];
 [00000000] 1
-[0, 1, 2].nth(3);
-[00007061:error] !!! nth: invalid index: 3
+l[3];
+[00007061:error] !!! []: invalid index: 3
 \end{urbiscript}
 
-\subsubsection{pop\_back}
+\subsubsection{removeBack}
 
 Remove and return the last element of the target. An error if the
 target is empty (\autoref{lst:list-popback}).
 
-\begin{urbiscript}[caption=List.pop\_back, label=lst:list-popback]
+\begin{urbiscript}[caption=List.removeBack, label=lst:list-popback]
 var x = [0, 1, 2];
 [00000000] [0, 1, 2]
-x.pop_back;
+x.removeBack;
 [00000000] 2
 x;
 [00000000] [0, 1]
-[].pop_back;
-[00000000:error] !!! pop_back: cannot be applied onto empty list
+[].removeBack;
+[00000000:error] !!! removeBack: cannot be applied onto empty list
 \end{urbiscript}
 
-\subsubsection{pop\_front}
+\subsubsection{removeFront}
 
 Remove and return the first element from the target. An error if the
 target is empty (\autoref{lst:list-popfront}).
 
-\begin{urbiscript}[caption=List.pop\_front, label=lst:list-popfront]
+\begin{urbiscript}[caption=List.removeFront, label=lst:list-popfront]
 var x = [0, 1, 2];
 [00000000] [0, 1, 2]
-x.pop_front;
+x.removeFront;
 [00000000] 0
 x;
 [00000000] [1, 2]
-[].pop_front;
-[00000000:error] !!! pop_front: cannot be applied onto empty list
+[].removeFront;
+[00000000:error] !!! removeFront: cannot be applied onto empty list
 \end{urbiscript}
 
-\subsubsection{push\_back}
+\subsubsection{insertBack}
 \label{sec:std-list-pushback}
 
 Insert the given element at the end of the target
 (\autoref{lst:list-pushback}).
 
-\begin{urbiscript}[caption=List.push\_back, label=lst:list-pushback]
+\begin{urbiscript}[caption=List.insertBack, label=lst:list-pushback]
 var x = [0, 1];
 [00000000] [0, 1]
-x.push_back(2);
+x.insertBack(2);
 [00000000] [0, 1, 2]
 x;
 [00000000] [0, 1, 2]
 \end{urbiscript}
 
-\subsubsection{push\_front}
+\subsubsection{insertFront}
 
 Insert the given element at the beginning of the target
 (\autoref{lst:list-pushfront}).
 
-\begin{urbiscript}[caption=List.push\_front, label=lst:list-pushfront]
+\begin{urbiscript}[caption=List.insertFront, label=lst:list-pushfront]
 var x = [1, 2];
 [00000000] [1, 2]
-x.push_front(0);
+x.insertFront(0);
 [00000000] [0, 1, 2]
 x;
 [00000000] [0, 1, 2]
@@ -304,7 +306,7 @@ second index excluded. An error if out of bounds (\autoref{lst:list-range}).
 [0, 1, 2, 3].range(1, 3);
 [00000000] [1, 2]
 [].range(1, 3);
-[00428697:error] !!! nth: invalid index: 1
+[00428697:error] !!! []: invalid index: 1
 \end{urbiscript}
 
 
@@ -360,16 +362,16 @@ equal two by two (\autoref{lst:list-sameAs}).
 [00000000] false
 \end{urbiscript}
 
-\subsubsection{setNth}
+\subsubsection{[]=}
 \label{sec:std-list-setnth}
 
 Assign a value to the element of the target at the given index
 (\autoref{lst:list-setNth}).
 
-\begin{urbiscript}[caption=List.setNth, label=lst:list-setNth]
+\begin{urbiscript}[caption=List.'[]=', label=lst:list-setNth]
 var x = [0, 1, 2];
 [00000000] [0, 1, 2]
-x.setNth(1, 42);
+x[1] = 42;
 [00000000] 42
 x;
 [00000000] [0, 42, 2]
@@ -442,7 +444,7 @@ given list(\autoref{lst:list-minus}).
 
 \subsubsection{\textless\textless}
 
-A synonym for \lstinline|push_back| (\autoref{sec:std-list-pushback}).
+A synonym for \lstinline|insertBack| (\autoref{sec:std-list-pushback}).
 
 \subsubsection{\textless}
 
@@ -460,9 +462,3 @@ other, and the first differing element is inferior to the other
 [0, 1, 2] < [0, 2, 2];
 [00000000] true
 \end{urbiscript}
-
-\subsubsection{[]}
-A synonym for \lstinline|nth| (\autoref{sec:std-list-nth}).
-
-\subsubsection{[]=}
-A synonym for \lstinline|setNth| (\autoref{sec:std-list-setnth}).
