--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -60,6 +60,12 @@ The parser could not read integer literals greater than 2**31-1.  This
 constraint has been alleviated, and Urbi now accepts integer literals
 up to 2**63-1.
 
+Display of integer literals
+---------------------------
+
+Some large floating point values could not be displayed correctly at
+the top level of the interpreter. This limitation has been removed.
+
 Standard library
 ================
 
