--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -82,6 +82,18 @@ catch (var x if x.isA(Float) && x > 10) // Catch all floats greater than 10
 catch (var e)  // Catch any other exception
 { ... }
 
+Modifiers syntax
+----------------
+
+Because of generalisations in the grammar, modifiers now require
+additional parentheses:
+
+x = value modifier1: v1 modifier2: v2;
+
+becomes:
+
+x = (value modifier1: v1 modifier2: v2);
+
 Parsing of integer literals
 ---------------------------
 
